--- a/perf/templates/success.html
+++ b/perf/templates/success.html
@@ -70,9 +70,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-						<h2>欢迎使用</h2>
-                        <h1>工作量自助登记系统！</h1>
-                        <h3>请选择：</h3>
+						<h2>提交成功！</h2>
+                        <h2>请等待审核！</h2>
+                        <h3>返回：</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
