--- a/perf/templates/add3.html
+++ b/perf/templates/add3.html
@@ -8,99 +8,105 @@
 <link rel="stylesheet" type="text/css" href="Login.css"/>  
 
 <style type="text/css">
-.smart-green {
+.bootstrap-frm {
 margin-left:auto;
 margin-right:auto;
 max-width: 500px;
-background: #F8F8F8;
-padding: 30px 30px 20px 30px;
-font: 12px Arial, Helvetica, sans-serif;
-color: #666;
+background: #FFF;
+padding: 20px 30px 20px 30px;
+font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+color: #888;
+text-shadow: 1px 1px 1px #FFF;
+border:1px solid #DDD;
 border-radius: 5px;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
 }
-.smart-green h1 {
-font: 24px "Trebuchet MS", Arial, Helvetica, sans-serif;
-padding: 20px 0px 20px 40px;
+.bootstrap-frm h1 {
+font: 25px "Helvetica Neue", Helvetica, Arial, sans-serif;
+padding: 0px 0px 10px 40px;
 display: block;
-margin: -30px -30px 10px -30px;
-color: #FFF;
-background: #9DC45F;
-text-shadow: 1px 1px 1px #949494;
-border-radius: 5px 5px 0px 0px;
--webkit-border-radius: 5px 5px 0px 0px;
--moz-border-radius: 5px 5px 0px 0px;
-border-bottom:1px solid #89AF4C;
+border-bottom: 1px solid #DADADA;
+margin: -10px -30px 30px -30px;
+color: #888;
 }
-.smart-green h1>span {
+.bootstrap-frm h1>span {
 display: block;
 font-size: 11px;
-color: #FFF;
 }
-.smart-green label {
+.bootstrap-frm label {
 display: block;
 margin: 0px 0px 5px;
 }
-.smart-green label>span {
+.bootstrap-frm label>span {
 float: left;
+width: 20%;
+text-align: right;
+padding-right: 10px;
 margin-top: 10px;
-color: #5E5E5E;
+color: #333;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+font-weight: bold;
 }
-.smart-green input[type="text"], .smart-green input[type="email"], .smart-green textarea, .smart-green select {
-color: #555;
-height: 30px;
+.bootstrap-frm input[type="text"], .bootstrap-frm input[type="email"], .bootstrap-frm textarea, .bootstrap-frm select{
+border: 1px solid #CCC;
+color: #888;
+height: 20px;
 line-height:15px;
-width: 100%;
-padding: 0px 0px 0px 10px;
+margin-bottom: 16px;
+margin-right: 6px;
 margin-top: 2px;
-border: 1px solid #E5E5E5;
-background: #FBFBFB;
-outline: 0;
--webkit-box-shadow: inset 1px 1px 2px rgba(238, 238, 238, 0.2);
-box-shadow: inset 1px 1px 2px rgba(238, 238, 238, 0.2);
-font: normal 14px/14px Arial, Helvetica, sans-serif;
+outline: 0 none;
+padding: 5px 0px 5px 5px;
+width: 70%;
+border-radius: 4px;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
-.smart-green textarea{
-height:100px;
-padding-top: 10px;
-}
-.smart-green select {
-background: url('down-arrow.png') no-repeat right, -moz-linear-gradient(top, #FBFBFB 0%, #E9E9E9 100%);
-background: url('down-arrow.png') no-repeat right, -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FBFBFB), color-stop(100%,#E9E9E9));
+.bootstrap-frm select {
+background: #FFF url('down-arrow.png') no-repeat right;
+background: #FFF url('down-arrow.png') no-repeat right;
 appearance:none;
 -webkit-appearance:none;
 -moz-appearance: none;
 text-indent: 0.01px;
 text-overflow: '';
-width:100%;
-height:30px;
+width: 70%;
+height: 35px;
+line-height:15px;
 }
-.smart-green .button {
-background-color: #9DC45F;
-border-radius: 5px;
--webkit-border-radius: 5px;
--moz-border-border-radius: 5px;
-border: none;
+.bootstrap-frm textarea{
+height:100px;
+padding: 5px 0px 0px 5px;
+width: 70%;
+}
+.bootstrap-frm .button {
+background: #FFF;
+border: 1px solid #CCC;
 padding: 10px 25px 10px 25px;
-color: #FFF;
-text-shadow: 1px 1px 1px #949494;
+color: #333;
+border-radius: 4px;
 }
-.smart-green .button:hover {
-background-color:#80A24A;
+.bootstrap-frm .button:hover {
+color: #333;
+background-color: #EBEBEB;
+border-color: #ADADAD;
 }
 </style> 
 
 </head>
 
 <body>
-<form action="." method="post" class="STYLE-NAME">
+<form action="" method="post" class="bootstrap-frm">{% csrf_token %}
 <h1>绩效登记
 <span>请按实际情况填写：</span>
 </h1>
 <label>
 <span>姓名 :</span>
-<input id="name" type="text" name="name" placeholder="请输入姓名" />
+<input id="name" type="text" name="name" placeholder="请输入姓名" required/>
 </label>
 <label>
 <span>室别 :</span><select name="team">
@@ -129,19 +135,21 @@ background-color:#80A24A;
 </label>
 <label>
 <span>数值 :</span>
-<input id="values" type="text" name="values" placeholder="请输入多少小时/次/班" />
+<input id="values" type="text" name="values" placeholder="请输入多少小时/次/班" required/>
 </label>
 <label>
 <span>日期 :</span>
-<input id="date" type="date" name="date" />
+<input id="date" type="date" name="date" required/>
 </label>
 <label>
 <span>备注 :</span>
-<textarea id="comment" name="comment" placeholder="请备注详细情况"></textarea>
+<textarea id="comment" name="comment" value="无" placeholder="（选填）请备注详细情况"></textarea>
 </label>
 <label>
 <span>&nbsp;</span>
-<button type="submit" class="button" value="提交">提交</button>
+<input type="submit" class="button" value="提交">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<input type="reset" class="button" value="重置">
 </label>
 </form>
 </body>
