--- a/perf/templates/count.html
+++ b/perf/templates/count.html
@@ -4,6 +4,9 @@
 <head>
 <meta http-equiv="Content-Type" content=text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
 <title>绩效统计</title>
 
 <link rel="stylesheet" type="text/css" href="Login.css"/>
