--- a/perf/templates/success.html
+++ b/perf/templates/success.html
@@ -53,7 +53,7 @@
                         <a href="https://checkinlib.heroku.com/add">CZ登记</a>
 					</li>
                     <li>
-						<a href="https://checkinlib.heroku.com/add">外航登记</a>
+						<a href="https://checkinlib.heroku.com/addother">外航登记</a>
 					</li>
                     <li>
 						<a href="https://checkinlib.heroku.com/481">绩效审核</a>
@@ -76,6 +76,7 @@
                     <div class="intro-message">
 						<h2>提交成功！</h2>
                         <h2>请等待审核！</h2>
+						<h1>广告栏位<h1>
                         <h3>返回：</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
@@ -83,7 +84,7 @@
                                 <a href="https://checkinlib.heroku.com/add" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">CZ登记</span></a>
                             </li>
                             <li>
-                                <a href="https://checkinlib.heroku.com/add" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">外航登记</span></a>
+                                <a href="https://checkinlib.heroku.com/addother" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">外航登记</span></a>
                             </li>
                             <li>
                                 <a href="https://checkinlib.heroku.com/481" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">绩效审核</span></a>
