--- a/perf/templates/welcome.html
+++ b/perf/templates/welcome.html
@@ -53,7 +53,7 @@
                         <a href="https://checkinlib.heroku.com/add">CZ登记</a>
 					</li>
                     <li>
-						<a href="https://checkinlib.heroku.com/add">外航登记</a>
+						<a href="https://checkinlib.heroku.com/addother">外航登记</a>
 					</li>
                     <li>
 						<a href="https://checkinlib.heroku.com/481">绩效审核</a>
@@ -75,7 +75,8 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
 						<h2>欢迎使用</h2>
-                        <h1>工作量自助登记系统！</h1>
+                        <h2>工作量自助登记系统！</h2>
+						<h1>广告栏位<h1>
                         <h3>请选择：</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
@@ -83,7 +84,7 @@
                                 <a href="https://checkinlib.heroku.com/add" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">CZ登记</span></a>
                             </li>
                             <li>
-                                <a href="https://checkinlib.heroku.com/add" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">外航登记</span></a>
+                                <a href="https://checkinlib.heroku.com/addother" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">外航登记</span></a>
                             </li>
                             <li>
                                 <a href="https://checkinlib.heroku.com/481" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">绩效审核</span></a>
