--- a/perf/templates/add4.html
+++ b/perf/templates/add4.html
@@ -61,7 +61,7 @@ margin-right: 6px;
 margin-top: 2px;
 outline: 0 none;
 padding: 5px 0px 5px 5px;
-width: 98%;
+width: 246%;
 border-radius: 4px;
 -webkit-border-radius: 4px;
 -moz-border-radius: 4px;
@@ -77,14 +77,14 @@ appearance:none;
 -moz-appearance: none;
 text-indent: 0.01px;
 text-overflow: '';
-width: 100%;
+width: 250%;
 height: 35px;
 line-height:15px;
 }
 .bootstrap-frm textarea{
 height:100px;
 padding: 5px 0px 0px 5px;
-width: 100%;
+width: 250%;
 }
 .bootstrap-frm .button {
 background: #FFF;
@@ -102,11 +102,11 @@ border-color: #ADADAD;
 </head>
 
 <body>
-	<div id="add"> 
+	<div id="add4"> 
 		<form action='.' method='POST' class="bootstrap-frm">{% csrf_token %}
 			<h1>绩效登记
 			<span>
-			请按实际情况填写，所填内容将提交481进行 <a rel="nofollow" href="http://checkinlib.heroku.com/481">审核</a><br/>
+			请按实际情况填写，所填内容将提交473进行 <a rel="nofollow" href="http://checkinlib.heroku.com/481">审核</a><br/>
 			点击此处 <a rel="nofollow" href="http://checkinlib.heroku.com/">返回</a>上一级</span>
 			
 			--------广告栏位--------
@@ -118,7 +118,7 @@ border-color: #ADADAD;
 			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 			<button type='submit' value='提交' class="button">提交</button>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<input type="reset" class="button" value="重置"></input>
+			<button type="reset" class="button" value="重置">重置</button>
 		</form>
 	</div>
 </body>
