--- a/perf/templates/count.html
+++ b/perf/templates/count.html
@@ -110,9 +110,9 @@ border-color: #ADADAD;
 			<table>
 				<input{{form}}></input>
 			</table>
-			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 			<button type='submit' class='button' value='下载'>下载</button>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<input type="reset" class="button" value="重置"></input>
 		</form>
 	</div>
