--- a/perf/templates/countother.html
+++ b/perf/templates/countother.html
@@ -78,14 +78,14 @@ appearance:none;
 -moz-appearance: none;
 text-indent: 0.01px;
 text-overflow: '';
-width: 200%;
+width: 100%;
 height: 35px;
 line-height:15px;
 }
 .bootstrap-frm textarea{
 height:100px;
 padding: 5px 0px 0px 5px;
-width: 200%;
+width: 100%;
 }
 .bootstrap-frm .button {
 background: #FFF;
@@ -110,9 +110,9 @@ border-color: #ADADAD;
 			<table>
 				<input{{form}}></input>
 			</table>
-			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 			<button type='submit' class='button' value='下载'>下载</button>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			&nbsp;&nbsp;&nbsp;&nbsp;
 			<button type="reset" class="button" value="重置">重置</button>
 		</form>
 	</div>
