--- a/perf/templates/add.html
+++ b/perf/templates/add.html
@@ -51,7 +51,7 @@ color: #333;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 font-weight: bold;
 }
-.bootstrap-frm input[type="text"], .bootstrap-frm input[type="email"], .bootstrap-frm textarea, .bootstrap-frm select{
+.bootstrap-frm input[type="text"], .bootstrap-frm input[type="number"], .bootstrap-frm textarea, .bootstrap-frm select{
 border: 1px solid #CCC;
 color: #888;
 height: 20px;
