--- a/perf/templates/add4.html
+++ b/perf/templates/add4.html
@@ -108,16 +108,23 @@ border-color: #ADADAD;
 			<span>
 			请按实际情况填写，所填内容将提交473进行 <a rel="nofollow" href="http://checkinlib.heroku.com/481">审核</a><br/>
 			点击此处 <a rel="nofollow" href="http://checkinlib.heroku.com/">返回</a>上一级</span>
-			
-			--------广告栏位--------
-			
+			<br/>
+			机场服务宣言：
+			<span>
+			<p>1、牢固树立真情服务理念</p>
+			<p>2、向所有旅客、航空公司提供平等的基本服务</p>
+			<p>3、强化机场服务的人文关怀</p>
+			<p>4、完善机场现代化的服务设施</p>
+			<p>5、营造真情服务的文化氛围</p>
+			<p>6、完善机场服务的评价机制</p>
+			</span>
 			</h1>
 			<table>
 				<input{{form}}></input>
 			</table>
-			<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 			<button type='submit' value='提交' class="button">提交</button>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<button type="reset" class="button" value="重置">重置</button>
 		</form>
 	</div>
