--- a/perf/templates/welcome.html
+++ b/perf/templates/welcome.html
@@ -74,10 +74,14 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-						<h2>欢迎使用</h2>
-                        <h2>工作量自助登记系统！</h2>
-						<h1>广告栏位<h1>
-                        <h3>请选择：</h3>
+						<h4>欢迎使用工作量自助登记系统！</h4>
+						<h2>机场服务宣言：</h2>
+						<p>1、牢固树立真情服务理念</p>
+						<p>2、向所有旅客、航空公司提供平等的基本服务</p>
+						<p>3、强化机场服务的人文关怀</p>
+						<p>4、完善机场现代化的服务设施</p>
+						<p>5、营造真情服务的文化氛围</p>
+						<p>6、完善机场服务的评价机制</p>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
