--- a/perf/templates/countother.html
+++ b/perf/templates/countother.html
@@ -112,7 +112,7 @@ border-color: #ADADAD;
 			</table>
 			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 			<button type='submit' class='button' value='下载'>下载</button>
-			&nbsp;&nbsp;&nbsp;&nbsp;
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<button type="reset" class="button" value="重置">重置</button>
 		</form>
 	</div>
