--- a/perf/templates/success.html
+++ b/perf/templates/success.html
@@ -74,9 +74,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-						<h2>提交成功！</h2>
+						<h2>提交成功，</h2>
                         <h2>请等待审核！</h2>
-						<h1>广告栏位<h1>
                         <h3>返回：</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
