--- a/perf/templates/add4.html
+++ b/perf/templates/add4.html
@@ -122,11 +122,66 @@ border-color: #ADADAD;
 			<table>
 				<input{{form}}></input>
 			</table>
+			<p>注意：</p>
+			<p>1、【数值】仅在登记【其他任务】时才需填写。</p>
+			<p>2、因【带机组】占用柜台工时，因此不再额外计算工作量，无需登记。</p>
 			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 			<button type='submit' value='提交' class="button">提交</button>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<button type="reset" class="button" value="重置">重置</button>
 		</form>
 	</div>
+
+<script language=JavaScript>
+<!--
+var caution = false
+function setCookie(name, value, expires, path, domain, secure) {
+var curCookie = name + "=" + escape(value) +
+((expires) ? "; expires=" + expires.toGMTString() : "") +
+((path) ? "; path=" + path : "") +
+((domain) ? "; domain=" + domain : "") +
+((secure) ? "; secure" : "")
+if (!caution || (name + "=" + escape(value)).length <= 4000)
+document.cookie = curCookie
+else
+if (confirm("Cookie exceeds 4KB and will be cut!"))
+document.cookie = curCookie
+}
+function getCookie(name) {
+var prefix = name + "="
+var cookieStartIndex = document.cookie.indexOf(prefix)
+if (cookieStartIndex == -1)
+return null
+var cookieEndIndex = document.cookie.indexOf(";", cookieStartIndex + prefix.length)
+if (cookieEndIndex == -1)
+cookieEndIndex = document.cookie.length
+return unescape(document.cookie.substring(cookieStartIndex + prefix.length, cookieEndIndex))
+}
+function deleteCookie(name, path, domain) {
+if (getCookie(name)) {
+document.cookie = name + "=" +
+((path) ? "; path=" + path : "") +
+((domain) ? "; domain=" + domain : "") +
+"; expires=Thu, 01-Jan-70 00:00:01 GMT"
+}
+}
+function fixDate(date) {
+var base = new Date(0)
+var skew = base.getTime()
+if (skew > 0)
+date.setTime(date.getTime() - skew)
+}
+var now = new Date()
+fixDate(now)
+now.setTime(now.getTime() + 365 * 24 * 60 * 60 * 1000)
+var visits = getCookie("counter")
+if (!visits)
+visits = 1
+else
+visits = parseInt(visits) + 1
+setCookie("counter", visits, now)
+document.write("You are the No." + visits + " guest！")
+// -->
+</script>
 </body>
 </html>
