--- a/perf/templates/add4.html
+++ b/perf/templates/add4.html
@@ -112,13 +112,17 @@ border-color: #ADADAD;
 			<span>
 			<h1>——广告招租——</h1>
 			</span>
+			<span><p>请注意：<br/>现在外航工作量改为登记【航班号】<br/>
+			原按外航登记的选项仅作本月的统计用，下月将删除，请勿选择。</span>
+			</p>
 			</h1>
 			<table>
 				<input{{form}}></input>
 			</table>
 			<p>注意：</p>
-			<p>1、【数值】仅在登记【其他任务】时才需填写。</p>
-			<p>2、因【带机组】占用柜台工时，因此不再额外计算工作量，无需登记。</p>
+			<p>1、【数值】仅在登记【额外任务】时才需填写。</p>
+			<p>2、【正常排班带机组】占用柜台工时，因此不再额外计算工作量，无需登记。</p>
+			<p>3、不上柜台，而被【临时调配带机组】，则按【临时调配带机组】登记。</p>
 			<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 			<button type='submit' value='提交' class="button">提交</button>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
