--- a/perf/templates/add.html
+++ b/perf/templates/add.html
@@ -110,7 +110,9 @@ border-color: #ADADAD;
 			点击此处 <a rel="nofollow" href="http://checkinlib.heroku.com/">返回</a>上一级</span>
 			<br/>
 			<span>
-			<h1>——广告招租——</h1>
+			<h3>注意：</br>
+			1、按排班上【超大】、【自助】、【导乘】、【卡大包】等，不需要登记，只有临时调配才需登记。</br>
+			2、【关封】【结关】等请填写航班“数量”，而非填填写“航班号”，“航班号”请填在备注里。</h3>
 			</span>
 			</h1>
 			<table>
