--- a/perf/templates/welcome.html
+++ b/perf/templates/welcome.html
@@ -75,7 +75,10 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
 						<h4>欢迎使用工作量自助登记系统！</h4>
-						<h1>——广告招租——</h1>
+						<h3>注意：</br>
+						1、按排班上【超大】、【自助】、【导乘】、【卡大包】等，不需要登记，只有临时调配才需登记。</br>
+						2、【关封】【结关】等请填写航班“数量”，而非填填写“航班号”，“航班号”请填在备注里。</h3>
+						</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
