--- a/perf/templates/welcome1.html
+++ b/perf/templates/welcome1.html
@@ -141,7 +141,7 @@
     <div class="tile-pre">
     <article id="video-1" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://http://checkinlib.heroku.com/add" width="700" height="800"></iframe>
+	<iframe src="http://checkinlib.heroku.com/add" width="700" height="800"></iframe>
     </div>
     </article>
     </div>
@@ -163,7 +163,7 @@
     <div class="tile-pre">
     <article id="video-2" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://http://checkinlib.heroku.com/addother" width="700" height="800"></iframe>
+	<iframe src="http://checkinlib.heroku.com/addother" width="700" height="800"></iframe>
     </div>
     </article>
     </div>
@@ -230,7 +230,7 @@
     <div class="tile-pre">
     <article id="video-5" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://http://checkinlib.heroku.com/count" width="700" height="300"></iframe>
+	<iframe src="http://checkinlib.heroku.com/count" width="700" height="300"></iframe>
     </div>
     </article>
     </div>
@@ -268,7 +268,7 @@
     <div class="tile-pre">
     <article id="video-6" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://http://checkinlib.heroku.com/countother" width="700" height="300"></iframe>
+	<iframe src="http://checkinlib.heroku.com/countother" width="700" height="300"></iframe>
     </div>
     </article>
     </div>
@@ -285,7 +285,7 @@
     <div class="tile-pre">
     <article id="video-7" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://http://checkinlib.heroku.com/ranking" width="700" height="300"></iframe>
+	<iframe src="http://checkinlib.heroku.com/ranking" width="700" height="300"></iframe>
     </div>
     </article>
     </div>
@@ -317,7 +317,7 @@
     <div class="tile-pre"> 
     <article id="video-3" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://http://checkinlib.heroku.com/aboutus" width="640" height="272"></iframe> <p><a href="checkinlib.heroku.com/481">我的绩效</a>  <a href="checkinlib.heroku.com/481">下载</a> 和 <a href="checkinlib.heroku.com/481">审核</a>.</p> <p>我的绩效将推出更多功能，敬请期待。。。<br /> <br /> 设计者<br /> 刘偲翀<br /> <br /> 总监及新闻发言人 <br /> 梁良</p>
+	<iframe src="http://checkinlib.heroku.com/aboutus" width="640" height="272"></iframe> <p><a href="checkinlib.heroku.com/481">我的绩效</a>  <a href="checkinlib.heroku.com/481">下载</a> 和 <a href="checkinlib.heroku.com/481">审核</a>.</p> <p>我的绩效将推出更多功能，敬请期待。。。<br /> <br /> 设计者<br /> 刘偲翀<br /> <br /> 总监及新闻发言人 <br /> 梁良</p>
     </div>
     </article>
     </div>
@@ -371,7 +371,7 @@
     <div class="tile-pre">
     <article id="video-4" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://http://checkinlib.heroku.com/daily" width="650" height="800"></iframe>
+	<iframe src="http://checkinlib.heroku.com/daily" width="650" height="800"></iframe>
     </div>
     </article>
     </div>
@@ -402,7 +402,7 @@
     </div>
      
 <!-- Tile 15 -->
-<a href="http://http://checkinlib.heroku.com/contact">
+<a href="http://checkinlib.heroku.com/contact">
     <div class="tile small live" data-stack="true" data-stops="0,100%" data-speed="750" data-delay="2500">
         <div class="live-back lime">
         	<img class="live-img" src="/static/mainpage/images/hyperlink.png"/>
@@ -442,7 +442,7 @@
     
 <!-- END TILE CONTENT -->
 </section><!-- end #content-mos-->
-<div class="copyrights">Collect from <a href="http://http://checkinlib.heroku.com" >网页</a></div>
+<div class="copyrights">Collect from <a href="http://checkinlib.heroku.com" >网页</a></div>
 <section class="mainpage">
 <!-- BEGIN TOGGLE CONTENT -->
 <!-- <div class="toggle-button"><span class="toggle-indicator">+</span></div> -->
