--- a/perf/templates/aboutus.html
+++ b/perf/templates/aboutus.html
@@ -121,6 +121,7 @@
 <img class="about-portrait" src="/static/mainpage/images/pages/p1.jpg" alt="Person 1" />
 <h3>刘偲翀</h3>
 <p>项目策划人</p>
+<p>&nbsp;</p>
 </div>
 </a>
 
@@ -170,13 +171,15 @@
 <a href="#" class="no-text-dec">
 <div class="about-person">
 <h3>...</h3>
-<p>...</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 </div>
 </a>
 
 <a href="contact.html" class="no-text-dec last">
 <div class="about-person">
 <h3>你</h3>
+<p>&nbsp;</p>
 <p>WE WANT YOU!</p>
 </div>
 </a>
