--- a/perf/templates/aboutus.html
+++ b/perf/templates/aboutus.html
@@ -185,12 +185,12 @@
 </a>
 </div>
 
-<div class="page-sub-title">
+<!--<div class="page-sub-title">
 <h1>团队介绍</h1>
 <div class="tagline">希望你<span class="whitetxt">喜欢</span></div>
 </div>
 
-<!-- <div id="about-testimonial" class="clearfix">
+<div id="about-testimonial" class="clearfix">
 
     <div class="testimonial-1">
     <div class="quote-w">
