--- a/perf/templates/aboutus.html
+++ b/perf/templates/aboutus.html
@@ -107,7 +107,7 @@
 <div id="pg-content" class="clearfix">
 
 <div id="page-excerpt">
-<span class="themecolortxt">爱逗工作坊（Ideal Workshop）</span> 是由两位富有创新激情的成员创立，现共有两名成员，目前正在为国际值机科打造一站式绩效解决方案而努力。正如你所看到，我们急需富有激情和创新精神的成员加入，我们的工作坊正在发现并策划新的项目，足以让你大显身手，期待你的参与。
+<span class="themecolortxt">爱逗工作坊（Ideal Workshop）</span> <br/>是由两位富有创新激情的成员创<br/>立，现共有两名成员，目前正在<br/>为国际值机科打造一站式绩效解<br/>决方案而努力。正如你所看到，<br/>我们急需富有激情和创新精神的<br/>成员加入，我们的工作坊正在发<br/>现并策划新的项目，足以让你大<br/>显身手，我们期待你的加入。
 </div>
 
 <div class="page-sub-title">
@@ -120,8 +120,8 @@
 <div class="about-person">
 <img class="about-portrait" src="/static/mainpage/images/pages/p1.jpg" alt="Person 1" />
 <h3>刘偲翀</h3>
-<p>项目策划人</p>
 <p>&nbsp;</p>
+<p>项目策划人</p>
 </div>
 </a>
 
