--- a/administrator/templates/daily1.html
+++ b/administrator/templates/daily1.html
@@ -387,16 +387,16 @@ $(document).ready(function(){
 				<option value=TG>TG</option>
 				<option value=VN>VN</option>
 				</select></div><br/>
-		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名1: <input type="text" class='input' id='name1' placeholder="请输入姓名" name="nameone" value='无'></input><span id='result1' style=color:red></span></div>
-		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名2: <input type="text" class='input' id='name2' placeholder="请输入姓名" name="nametwo" value='无'></input><span id='result2' style=color:red></span></div>
-		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名3: <input type="text" class='input' id='name3' placeholder="请输入姓名" name="namethree" value='无'></input><span id='result3' style=color:red></span></div>
-		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名4: <input type="text" class='input' id='name4' placeholder="请输入姓名" name="namefour" value='无'></input><span id='result4' style=color:red></span></div>
-		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名5: <input type="text" class='input' id='name5' placeholder="请输入姓名" name="namefive" value='无'></input><span id='result5' style=color:red></span></div>
-		<div id='div1' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名6: <input type="text" class='input' id='name6' placeholder="请输入姓名" name="namesix" value='无'></input><span id='result6' style=color:red></span></div>
-		<div id='div2' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名7: <input type="text" class='input' id='name7' placeholder="请输入姓名" name="nameseven" value='无'></input><span id='result7' style=color:red></span></div>
-		<div id='div3' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名8: <input type="text" class='input' id='name8' placeholder="请输入姓名" name="nameeight" value='无'></input><span id='result8' style=color:red></span></div>
-		<div id='div4' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名9: <input type="text" class='input' id='name9' placeholder="请输入姓名" name="namenine" value='无'></input><span id='result9' style=color:red></span></div>
-		<div id='div5' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;名10: <input type="text" class='input' id='name10' placeholder="请输入姓名" name="nameten" value='无'></input><span id='result10' style=color:red></span></div>
+		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名1: <input type="text" class='input' id='name1' placeholder="请输入姓名" name="nameone" value='无'></input><br/><span id='result1' style=color:red></span></div>
+		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名2: <input type="text" class='input' id='name2' placeholder="请输入姓名" name="nametwo" value='无'></input><br/><span id='result2' style=color:red></span></div>
+		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名3: <input type="text" class='input' id='name3' placeholder="请输入姓名" name="namethree" value='无'></input><br/><span id='result3' style=color:red></span></div>
+		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名4: <input type="text" class='input' id='name4' placeholder="请输入姓名" name="namefour" value='无'></input><br/><span id='result4' style=color:red></span></div>
+		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名5: <input type="text" class='input' id='name5' placeholder="请输入姓名" name="namefive" value='无'></input><br/><span id='result5' style=color:red></span></div>
+		<div id='div1' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名6: <input type="text" class='input' id='name6' placeholder="请输入姓名" name="namesix" value='无'></input><br/><span id='result6' style=color:red></span></div>
+		<div id='div2' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名7: <input type="text" class='input' id='name7' placeholder="请输入姓名" name="nameseven" value='无'></input><br/><span id='result7' style=color:red></span></div>
+		<div id='div3' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名8: <input type="text" class='input' id='name8' placeholder="请输入姓名" name="nameeight" value='无'></input><br/><span id='result8' style=color:red></span></div>
+		<div id='div4' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名9: <input type="text" class='input' id='name9' placeholder="请输入姓名" name="namenine" value='无'></input><br/><span id='result9' style=color:red></span></div>
+		<div id='div5' style='display:none'> 姓&nbsp;&nbsp;&nbsp;&nbsp;名10: <input type="text" class='input' id='name10' placeholder="请输入姓名" name="nameten" value='无'></input><br/><span id='result10' style=color:red></span></div>
 		<br/>
 		<div class='button' id='button1' style='display:block color:yellow'>+添加</div><br/>
 		<button type='submit' class='button' value='提交'>提交</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
