--- a/perf/templates/add.html
+++ b/perf/templates/add.html
@@ -265,7 +265,7 @@ $(document).ready(function(){
 	<form action="/add/" method="post">
 	{% csrf_token %}
 		<br/>
-		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;名: <input type="text" class='input' id='name1' required=True placeholder="请输入姓名" name="name"></input><span id='result1' style=color:red></span></div>
+		<div>姓&nbsp;&nbsp;&nbsp;&nbsp;名: <input type="text" class='input' id='name1' required=True placeholder="请输入姓名" name="name"></input><br/><span id='result1' style=color:red></span></div>
 		<div>项&nbsp;&nbsp;目1: <select type="select" class='select' id='select1' required="required" name="performance">
 			<option value=0.0>无</option>
 			<option value=5.0>挑行李件数（填写【1】次挑行李的件数）</option>
@@ -282,7 +282,7 @@ $(document).ready(function(){
 			<option value=1.2>协助481工作/小时（如退关、送旅客、到B区拿行李等，请备注）</option>
 			<option value=1.3>其他/小时/次/班（请备注）</option>
 			</select></div>
-		<div>数&nbsp;&nbsp;值1: <input type="number" class='input' id='value1' placeholder="请输入数值" name="values" value=0></input><span id='result2' style=color:red></span></div>
+		<div>数&nbsp;&nbsp;值1: <input type="number" class='input' id='value1' placeholder="请输入数值" name="values" value=0></input><br/><span id='result2' style=color:red></span></div>
 		<div id='button1' style='width:350px;text-align:center;display:block'>+点击添加更多项目</div><br/>
 		<div id='div1' style='display:none'>项&nbsp;&nbsp;目2: <select type="select" class='select' id='select2' name="performancetwo">
 			<option value=0.0>无</option>
@@ -300,7 +300,7 @@ $(document).ready(function(){
 			<option value=1.2>协助481工作/小时（如退关、送旅客、到B区拿行李等，请备注）</option>
 			<option value=1.3>其他/小时/次/班（请备注）</option>
 			</select></div>
-		<div id='div2' style='display:none'>数&nbsp;&nbsp;值2: <input type="number" class='input' id='value2' placeholder="请输入数值" name="valuestwo" value=0></input><span id='result3' style=color:red></span></div>
+		<div id='div2' style='display:none'>数&nbsp;&nbsp;值2: <input type="number" class='input' id='value2' placeholder="请输入数值" name="valuestwo" value=0></input><br/><span id='result3' style=color:red></span></div>
 		<div id='div3' style='display:none'>项&nbsp;&nbsp;目3: <select type="select" class='select' id='select3' name="performancethree">
 			<option value=0.0>无</option>
 			<option value=5.0>挑行李件数（填写【1】次挑行李的件数）</option>
@@ -317,7 +317,7 @@ $(document).ready(function(){
 			<option value=1.2>协助481工作/小时（如退关、送旅客、到B区拿行李等，请备注）</option>
 			<option value=1.3>其他/小时/次/班（请备注）</option>
 			</select></div>
-		<div id='div4' style='display:none'>数&nbsp;&nbsp;值3: <input type="number" class='input' id='value3' placeholder="请输入数值" name="valuesthree" value=0></input><span id='result4' style=color:red></span></div>
+		<div id='div4' style='display:none'>数&nbsp;&nbsp;值3: <input type="number" class='input' id='value3' placeholder="请输入数值" name="valuesthree" value=0></input><br/><span id='result4' style=color:red></span></div>
 		<div>指派室: <select type="select" class='select' id='select4' required="required" name="supervisor">
 			<option value=一室>一室（罗志璋、毛思嬴等）</option>
 			<option value=二室>二室（姚秋焕、刘周敏等）</option>
@@ -325,7 +325,7 @@ $(document).ready(function(){
 			<option value=团队>团队（吴玲、梁良等）</option>
 			</select></div>
 		<div>日&nbsp;&nbsp;&nbsp;&nbsp;期: <input type="date" class='input' id='date1' placeholder="请输入日期" required="required" name="date"></div>
-		<div>备&nbsp;&nbsp;&nbsp;&nbsp;注: <input type="textarea" class='input' id='comment1' placeholder="填写如关封航班号、退关航班号和协助481的具体工作" maxlength=40 name="comment" value='无'></input><span id='result1' style=color:red></span></div>
+		<div>备&nbsp;&nbsp;&nbsp;&nbsp;注: <input type="textarea" class='input' id='comment1' placeholder="填写如关封航班号、退关航班号和协助481的具体工作" maxlength=40 name="comment" value='无'></input></div>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type='submit' class='button' value='提交'>提交</button>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="reset" class="button" value="重置">重置</button>
 	</form>
