--- a/perf/templates/welcome1.html
+++ b/perf/templates/welcome1.html
@@ -186,7 +186,7 @@
         <h1 class="lb-project"><a href="singleportfolio.html">我要查询！</a></h1>
         <span class="projectcat redtxt">绩效、各项检查均可提供查询哦</span>
         <div class="lb-desc">
-            <p>查询帐号在此！一号在手，天下我有！<br/>帐号：guojizhiji<br/>密码：gjzz123456<br/><b>一般人我不告诉他！</a></b><br/><br/><br/><b>免责声明：</b><br/>查到不合格可别怪我！...</p>
+            <p>查询帐号在此！一号在手，天下我有！<br/>帐号：guojizhiji<br/>密码：gjzj123456<br/><b>一般人我不告诉他！</a></b><br/><br/><br/><b>免责声明：</b><br/>查到不合格可别怪我！...</p>
             <p><a class="exp-button" href="singleportfolio.html">点击同意并继续</a></p>
         </div>
     </div>
