--- a/perf/templates/welcome1.html
+++ b/perf/templates/welcome1.html
@@ -57,36 +57,36 @@
 <nav>
 <ul id="nav" class="clearfix">
 <!-- Menu Item 1 -->
-	<li class="current"><a href="http://checkinlib.heroku.com/" title="Home"><span>首页</span></a></li>
+	<li class="current"><a href="http://checkinlib.herokuapp.com/" title="Home"><span>首页</span></a></li>
 <!-- Menu Item 2 -->
     <li>
     	<a href="#" title="482"><span>482功能</span></a>
         <ul>
-        	<li><a href="http://checkinlib.heroku.com/add/" title="CZ"><span>CZ登记</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/addother" title="Others"><span>外航登记</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/481" title="Check"><span>查询</span></a></li>
+        	<li><a href="http://checkinlib.herokuapp.com/add/" title="CZ"><span>CZ登记</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/addother" title="Others"><span>外航登记</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/481" title="Check"><span>查询</span></a></li>
         </ul>
     </li>
 <!-- Menu Item 3 -->
     <li><a href="#" title="481"><span>481功能</span></a>
     	<ul>
-        	<li><a href="http://checkinlib.heroku.com/daily" title="Inspection"><span>各项检查登记</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/481" title="verification"><span>审核</span></a></li>
+        	<li><a href="http://checkinlib.herokuapp.com/daily" title="Inspection"><span>各项检查登记</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/481" title="verification"><span>审核</span></a></li>
         </ul>
     </li>
 <!-- Menu Item 4 -->
     <li>
     	<a href="#" title="Report"><span>统计报表</span></a>
         <ul>
-        	<li><a href="http://checkinlib.heroku.com/count" title="CZ"><span>CZ绩效统计</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/countother" title="Others"><span>外航绩效统计</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/ranking" title="Score"><span>质量评分表</span></a></li>
+        	<li><a href="http://checkinlib.herokuapp.com/count" title="CZ"><span>CZ绩效统计</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/countother" title="Others"><span>外航绩效统计</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/ranking" title="Score"><span>质量评分表</span></a></li>
         </ul>
     </li>
 <!-- Menu Item 5 -->
-    <li><a href="http://checkinlib.heroku.com/aboutus" title="About"><span>关于</span></a></li>
+    <li><a href="http://checkinlib.herokuapp.com/aboutus" title="About"><span>关于</span></a></li>
 <!-- Menu Item 6 -->
-    <li><a href="http://checkinlib.heroku.com/contact" title="Contact"><span>联系</span></a></li>
+    <li><a href="http://checkinlib.herokuapp.com/contact" title="Contact"><span>联系</span></a></li>
 </ul>
 </nav>
 <!-- END NAVIGATION -->
@@ -141,7 +141,7 @@
     <div class="tile-pre">
     <article id="video-1" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://checkinlib.heroku.com/add" width="480" height="800"></iframe>
+	<iframe src="http://checkinlib.herokuapp.com/add" width="480" height="800"></iframe>
     </div>
     </article>
     </div>
@@ -163,7 +163,7 @@
     <div class="tile-pre">
     <article id="video-2" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://checkinlib.heroku.com/addother" width="480" height="800"></iframe>
+	<iframe src="http://checkinlib.herokuapp.com/addother" width="480" height="800"></iframe>
     </div>
     </article>
     </div>
@@ -230,7 +230,7 @@
     <div class="tile-pre">
     <article id="video-5" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://checkinlib.heroku.com/count" width="480" height="300"></iframe>
+	<iframe src="http://checkinlib.herokuapp.com/count" width="480" height="300"></iframe>
     </div>
     </article>
     </div>
@@ -268,7 +268,7 @@
     <div class="tile-pre">
     <article id="video-6" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://checkinlib.heroku.com/countother" width="480" height="300"></iframe>
+	<iframe src="http://checkinlib.herokuapp.com/countother" width="480" height="300"></iframe>
     </div>
     </article>
     </div>
@@ -285,7 +285,7 @@
     <div class="tile-pre">
     <article id="video-7" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://checkinlib.heroku.com/ranking" width="480" height="300"></iframe>
+	<iframe src="http://checkinlib.herokuapp.com/ranking" width="480" height="300"></iframe>
     </div>
     </article>
     </div>
@@ -317,7 +317,7 @@
     <div class="tile-pre"> 
     <article id="video-3" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://checkinlib.heroku.com/aboutus" width="480" height="1000"></iframe> <p><a href="checkinlib.heroku.com/481">我的绩效</a>  <a href="checkinlib.heroku.com/481">下载</a> 和 <a href="checkinlib.heroku.com/481">审核</a>.</p> <p>我的绩效将推出更多功能，敬请期待。。。<br /> <br /> 设计者<br /> 刘偲翀<br /> <br /> 总监及新闻发言人 <br /> 梁良</p>
+	<iframe src="http://checkinlib.herokuapp.com/aboutus" width="480" height="1000"></iframe> <p><a href="checkinlib.herokuapp.com/481">我的绩效</a>  <a href="checkinlib.herokuapp.com/481">下载</a> 和 <a href="checkinlib.herokuapp.com/481">审核</a>.</p> <p>我的绩效将推出更多功能，敬请期待。。。<br /> <br /> 设计者<br /> 刘偲翀<br /> <br /> 总监及新闻发言人 <br /> 梁良</p>
     </div>
     </article>
     </div>
@@ -371,7 +371,7 @@
     <div class="tile-pre">
     <article id="video-4" class="lb-article">  
     <div class="lb-video"> 
-	<iframe src="http://checkinlib.heroku.com/daily" width="480" height="1000"></iframe>
+	<iframe src="http://checkinlib.herokuapp.com/daily" width="480" height="1000"></iframe>
     </div>
     </article>
     </div>
@@ -402,7 +402,7 @@
     </div>
      
 <!-- Tile 15 -->
-<a href="http://checkinlib.heroku.com/contact">
+<a href="http://checkinlib.herokuapp.com/contact">
     <div class="tile small live" data-stack="true" data-stops="0,100%" data-speed="750" data-delay="2500">
         <div class="live-back lime">
         	<img class="live-img" src="/static/mainpage/images/hyperlink.png"/>
@@ -434,7 +434,7 @@
         <span class="projectcat tealtxt"></span>
         <div class="lb-desc">
             <p><b></a></b></p>
-            <p><a class="exp-button" href="http://checkinlib.heroku.com/481">开始审核 &#8594;</a></p>
+            <p><a class="exp-button" href="http://checkinlib.herokuapp.com/481">开始审核 &#8594;</a></p>
         </div>
     </div>
     </article>
@@ -442,7 +442,7 @@
     
 <!-- END TILE CONTENT -->
 </section><!-- end #content-mos-->
-<div class="copyrights">Collect from <a href="http://checkinlib.heroku.com" >网页</a></div>
+<div class="copyrights">Collect from <a href="http://checkinlib.herokuapp.com" >网页</a></div>
 <section class="mainpage">
 <!-- BEGIN TOGGLE CONTENT -->
 <!-- <div class="toggle-button"><span class="toggle-indicator">+</span></div> -->
