--- a/perf/templates/success1.html
+++ b/perf/templates/success1.html
@@ -57,36 +57,36 @@
 <nav>
 <ul id="nav" class="clearfix">
 <!-- Menu Item 1 -->
-	<li class="current"><a href="http://checkinlib.heroku.com/" title="Home"><span>首页</span></a></li>
+	<li class="current"><a href="http://checkinlib.herokuapp.com/" title="Home"><span>首页</span></a></li>
 <!-- Menu Item 2 -->
     <li>
     	<a href="#" title="482"><span>482功能</span></a>
         <ul>
-        	<li><a href="http://checkinlib.heroku.com/add/" title="CZ"><span>CZ登记</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/addother" title="Others"><span>外航登记</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/481" title="Check"><span>查询</span></a></li>
+        	<li><a href="http://checkinlib.herokuapp.com/add/" title="CZ"><span>CZ登记</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/addother" title="Others"><span>外航登记</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/481" title="Check"><span>查询</span></a></li>
         </ul>
     </li>
 <!-- Menu Item 3 -->
     <li><a href="#" title="481"><span>481功能</span></a>
     	<ul>
-        	<li><a href="http://checkinlib.heroku.com/daily" title="Inspection"><span>各项检查登记</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/481" title="verification"><span>审核</span></a></li>
+        	<li><a href="http://checkinlib.herokuapp.com/daily" title="Inspection"><span>各项检查登记</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/481" title="verification"><span>审核</span></a></li>
         </ul>
     </li>
 <!-- Menu Item 4 -->
     <li>
     	<a href="#" title="Report"><span>统计报表</span></a>
         <ul>
-        	<li><a href="http://checkinlib.heroku.com/count" title="CZ"><span>CZ绩效统计</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/countother" title="Others"><span>外航绩效统计</span></a></li>
-            <li><a href="http://checkinlib.heroku.com/ranking" title="Score"><span>质量评分表</span></a></li>
+        	<li><a href="http://checkinlib.herokuapp.com/count" title="CZ"><span>CZ绩效统计</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/countother" title="Others"><span>外航绩效统计</span></a></li>
+            <li><a href="http://checkinlib.herokuapp.com/ranking" title="Score"><span>质量评分表</span></a></li>
         </ul>
     </li>
 <!-- Menu Item 5 -->
-    <li><a href="http://checkinlib.heroku.com/aboutus" title="About"><span>关于</span></a></li>
+    <li><a href="http://checkinlib.herokuapp.com/aboutus" title="About"><span>关于</span></a></li>
 <!-- Menu Item 6 -->
-    <li><a href="http://checkinlib.heroku.com/contact" title="Contact"><span>联系</span></a></li>
+    <li><a href="http://checkinlib.herokuapp.com/contact" title="Contact"><span>联系</span></a></li>
 </ul>
 </nav>
 <!-- END NAVIGATION -->
