--- a/perf/templates/add.html
+++ b/perf/templates/add.html
@@ -109,7 +109,12 @@ $(document).ready(function(){
 		
 		if (result1 != '输入正确！')
 		{
-		$(this).val(''); 
+		$("#btn1").attr("disabled", true);
+		}
+		
+		else
+		{
+		$("#btn1").attr("disabled", false);
 		}
 	});
 });
