--- a/perf/templates/add.html
+++ b/perf/templates/add.html
@@ -104,20 +104,19 @@ $(document).ready(function(){
 		$.get("/validate/",{'name':name}, function(ret){
 			$('#result1').html(ret);
 		});
-		
-		var result1 = $('#result1').val();
-		
-		if (result1 != '输入正确')
-		{
-		$("#btn1").attr("disabled", true);
-		}
-		
-		else
-		{
-		$("#btn1").removeAttr("disabled");
-		}
 	});
 });
+
+$(document).ready(function(){
+	$('#btn1').click(function(){
+		var result1 = $('#result1').val();
+		
+		if (result1 != '输入正确！')
+		{
+		$("#name1").val('');
+		}
+	});
+})
 
 $(document).ready(function(){
 	$('#comment1').focus(function(){
@@ -267,6 +266,7 @@ $(document).ready(function(){
 		}		
 	});
 })
+
 </script>
 
 
