--- a/perf/templates/add4.html
+++ b/perf/templates/add4.html
@@ -109,7 +109,7 @@ $(document).ready(function(){
 
 $(document).ready(function(){
 	$('#btn1').click(function(){
-		var result1 = $('#result1').val();
+		var result1 = $('#result1').html();
 		
 		if (result1 != '输入正确！')
 		{
