--- a/perf/templates/add.html
+++ b/perf/templates/add.html
@@ -331,10 +331,10 @@ $(document).ready(function(){
 			</select></div>
 		<div id='div4' style='display:none'>数&nbsp;&nbsp;值3: <input type="number" class='input' id='value3' placeholder="请输入数值" name="valuesthree" value=0></input><br/><span id='result4' style=color:red></span></div>
 		<div>指派室: <select type="select" class='select' id='select4' required="required" name="supervisor">
-			<option value=一室>一室（罗志璋、毛思嬴等）</option>
-			<option value=二室>二室（姚秋焕、刘周敏等）</option>
-			<option value=三室>三室（卢亘、温志森等）</option>
-			<option value=团队>团队（吴玲、梁良等）</option>
+			<option value=一室>一室</option>
+			<option value=二室>二室</option>
+			<option value=三室>三室</option>
+			<option value=团队>团队</option>
 			</select></div>
 		<div>日&nbsp;&nbsp;&nbsp;&nbsp;期: <input type="date" class='input' id='date1' placeholder="请输入日期" required="required" name="date"></div>
 		<div>备&nbsp;&nbsp;&nbsp;&nbsp;注: <input type="textarea" class='input' id='comment1' placeholder="填写如关封航班号、退关航班号和协助481的具体工作" maxlength=40 name="comment" value='无'></input></div>
