--- a/perf/templates/add4.html
+++ b/perf/templates/add4.html
@@ -381,6 +381,7 @@ $(document).ready(function(){
 			<option value=20.001>PRE-FLT</option>
 			<option value=20.002>POST-FLT</option>
 			<option value=20.003>带机组（仅3U）</option>
+			<option value=20.004>推上</option>
 			</select><br/><span id='result2' style=color:red></span></div>
 		<div id='button1' style='width:350px;text-align:center;display:block'>+点击添加更多项目</div><br/>
 		<div id='div1' style='display:none'>其他任务2&nbsp;&nbsp;: <select type="select" class='select' id='select5' name="taskthree">
