--- a/perf/templates/add.html
+++ b/perf/templates/add.html
@@ -283,16 +283,20 @@ $(document).ready(function(){
 			<option value=5.0>挑行李件数（填写【1】次挑行李的件数）</option>
 			<option value=20.0>网上值机/小时</option>
 			<option value=20.1>团队托运/小时</option>
-			<option value=10.0>值夜结关/班（填写【航班数】，航班号填写在备注栏）</option>
-			<option value=10.1>值夜数票/次</option>
-			<option value=15.0>关封/班（填写【航班数】，航班号填写在备注栏）</option>
-			<option value=20.2>超大/小时</option>
-			<option value=20.3>卡大包/小时</option>
+			<option value=10.0>值夜结关/班（【航班号】填写在备注栏）</option>
+			<option value=30.1>顶替481巡视或471/小时</option>
+			<option value=15.0>关封/班（【航班号】填写在备注栏）</option>
+			<option value=20.2>顶替超大/小时</option>
+			<option value=20.3>协助结关/小时</option>
 			<option value=20.4>Q口引导/小时</option>
 			<option value=1.0>加CZ柜台/小时</option>
 			<option value=1.1>延时下班/小时</option>
-			<option value=1.2>协助481工作/小时（如退关、送旅客、到B区拿行李等，请备注）</option>
-			<option value=1.3>其他/小时/次/班（请备注）</option>
+			<option value=1.2>带晚到旅客/次</option>
+			<option value=1.3>带旅客去行查/次</option>
+			<option value=1.4>协助退关/次</option>
+			<option value=1.5>到达取行李/次</option>
+			<option value=1.6>拿宵夜/次</option>
+			<option value=1.7>其他/次（请备注）</option>
 			</select></div>
 		<div>数&nbsp;&nbsp;值1: <input type="number" class='input' id='value1' placeholder="请输入数值" name="values" value=0></input><br/><span id='result2' style=color:red></span></div>
 		<div id='button1' style='width:350px;text-align:center;display:block'>+点击添加更多项目</div><br/>
@@ -301,16 +305,20 @@ $(document).ready(function(){
 			<option value=5.0>挑行李件数（填写【1】次挑行李的件数）</option>
 			<option value=20.0>网上值机/小时</option>
 			<option value=20.1>团队托运/小时</option>
-			<option value=10.0>值夜结关/班（填写【航班数】，航班号填写在备注栏）</option>
-			<option value=10.1>值夜数票/次</option>
-			<option value=15.0>关封/班（填写【航班数】，航班号填写在备注栏）</option>
-			<option value=20.2>超大/小时</option>
-			<option value=20.3>卡大包/小时</option>
+			<option value=10.0>值夜结关/班（【航班号】填写在备注栏）</option>
+			<option value=30.1>顶替481巡视或471/小时</option>
+			<option value=15.0>关封/班（【航班号】填写在备注栏）</option>
+			<option value=20.2>顶替超大/小时</option>
+			<option value=20.3>协助结关/小时</option>
 			<option value=20.4>Q口引导/小时</option>
 			<option value=1.0>加CZ柜台/小时</option>
 			<option value=1.1>延时下班/小时</option>
-			<option value=1.2>协助481工作/小时（如退关、送旅客、到B区拿行李等，请备注）</option>
-			<option value=1.3>其他/小时/次/班（请备注）</option>
+			<option value=1.2>带晚到旅客/次</option>
+			<option value=1.3>带旅客去行查/次</option>
+			<option value=1.4>协助退关/次</option>
+			<option value=1.5>到达取行李/次</option>
+			<option value=1.6>拿宵夜/次</option>
+			<option value=1.7>其他/次（请备注）</option>
 			</select></div>
 		<div id='div2' style='display:none'>数&nbsp;&nbsp;值2: <input type="number" class='input' id='value2' placeholder="请输入数值" name="valuestwo" value=0></input><br/><span id='result3' style=color:red></span></div>
 		<div id='div3' style='display:none'>项&nbsp;&nbsp;目3: <select type="select" class='select' id='select3' name="performancethree">
@@ -318,16 +326,20 @@ $(document).ready(function(){
 			<option value=5.0>挑行李件数（填写【1】次挑行李的件数）</option>
 			<option value=20.0>网上值机/小时</option>
 			<option value=20.1>团队托运/小时</option>
-			<option value=10.0>值夜结关/班（填写【航班数】，航班号填写在备注栏）</option>
-			<option value=10.1>值夜数票/次</option>
-			<option value=15.0>关封/班（填写【航班数】，航班号填写在备注栏）</option>
-			<option value=20.2>超大/小时</option>
-			<option value=20.3>卡大包/小时</option>
+			<option value=10.0>值夜结关/班（【航班号】填写在备注栏）</option>
+			<option value=30.1>顶替481巡视或471/小时</option>
+			<option value=15.0>关封/班（【航班号】填写在备注栏）</option>
+			<option value=20.2>顶替超大/小时</option>
+			<option value=20.3>协助结关/小时</option>
 			<option value=20.4>Q口引导/小时</option>
 			<option value=1.0>加CZ柜台/小时</option>
 			<option value=1.1>延时下班/小时</option>
-			<option value=1.2>协助481工作/小时（如退关、送旅客、到B区拿行李等，请备注）</option>
-			<option value=1.3>其他/小时/次/班（请备注）</option>
+			<option value=1.2>带晚到旅客/次</option>
+			<option value=1.3>带旅客去行查/次</option>
+			<option value=1.4>协助退关/次</option>
+			<option value=1.5>到达取行李/次</option>
+			<option value=1.6>拿宵夜/次</option>
+			<option value=1.7>其他/次（请备注）</option>
 			</select></div>
 		<div id='div4' style='display:none'>数&nbsp;&nbsp;值3: <input type="number" class='input' id='value3' placeholder="请输入数值" name="valuesthree" value=0></input><br/><span id='result4' style=color:red></span></div>
 		<div>指派室: <select type="select" class='select' id='select4' required="required" name="supervisor">
